[gd_scene load_steps=3 format=3 uid="uid://bp8c4d7h5k2w1"]

[ext_resource type="Script" uid="uid://bfa3bfb4s1vkm" path="res://ui/player_ui.gd" id="1_1xp1w"]
[ext_resource type="Script" path="res://ui/components/hotbar_ui.gd" id="2_hotbar"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 170.0
script = ExtResource("1_1xp1w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -14.0
offset_right = 232.0
offset_bottom = 164.0
color = Color(0, 0, 0, 0.196078)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1

[node name="HealthContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthEmoji" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "üíö"

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="HungerContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HungerEmoji" type="Label" parent="VBoxContainer/HungerContainer"]
layout_mode = 2
text = "üçñ"

[node name="HungerBar" type="ProgressBar" parent="VBoxContainer/HungerContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="ThirstContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ThirstEmoji" type="Label" parent="VBoxContainer/ThirstContainer"]
layout_mode = 2
text = "üíß"

[node name="ThirstBar" type="ProgressBar" parent="VBoxContainer/ThirstContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="TirednessContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TirednessEmoji" type="Label" parent="VBoxContainer/TirednessContainer"]
layout_mode = 2
text = "üò¥"

[node name="TirednessBar" type="ProgressBar" parent="VBoxContainer/TirednessContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="InventoryContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="VBoxContainer/InventoryContainer"]
layout_mode = 2
text = "ü™µ 0"

[node name="FoodLabel" type="Label" parent="VBoxContainer/InventoryContainer"]
layout_mode = 2
text = "üçñ 0"

[node name="HotbarContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HotbarLabel" type="Label" parent="VBoxContainer/HotbarContainer"]
layout_mode = 2
text = "Hotbar:"
horizontal_alignment = 1

[node name="HotbarUI" type="HBoxContainer" parent="VBoxContainer/HotbarContainer"]
layout_mode = 2
script = ExtResource("2_hotbar")
